micrograd for fun

--- a/ml-explore/notebooks/keras101.ipynb
+++ b/ml-explore/notebooks/keras101.ipynb
@@ -2,6 +2,50 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def np_chunk(n: int, it):\n",
+    "    a = np.array(it)\n",
+    "    even_idx = len(a) - (len(a) % n)\n",
+    "    result = np.split(a[:even_idx], n)\n",
+    "    result.append(a[even_idx:]) if even_idx != len(a) else None\n",
+    "    \n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array([1, 2]), array([3, 4])]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np_chunk(2, [1,2,3,4])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 268,
    "metadata": {},
    "outputs": [],
