--- a/aoc/2023/answers.ipynb
+++ b/aoc/2023/answers.ipynb
@@ -18,13 +18,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 32,
    "id": "a62aeaf0-bd5b-4a8c-9a7b-c5fa46d18c08",
    "metadata": {},
    "outputs": [],
    "source": [
     "from typing import List\n",
-    "from collections import Counter"
+    "from collections import Counter, abc"
    ]
   },
   {
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 87,
    "id": "21555f69-c80b-4d96-8a2a-c3f55714ddf9",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,43 @@
     "    \n",
     "    @staticmethod\n",
     "    def parse_input(sample_str, filename, pp=lambda x: x):\n",
-    "        return Parser._read_test_input(sample_str, pp), Parser._read_file(filename, pp)"
+    "        return Parser._read_test_input(sample_str, pp), Parser._read_file(filename, pp)\n",
+    "\n",
+    "\n",
+    "class Grid(abc.Mapping):\n",
+    "    \"\"\"\n",
+    "        2D-grid keyed by (row, col) and value is content\n",
+    "    \"\"\"\n",
+    "    def __init__(self, lines: List[str]):\n",
+    "        self._grid = {(r, c): v.strip()\n",
+    "                        for r, line in enumerate(lines)\n",
+    "                        for c, v in enumerate(line)}\n",
+    "        self.directions = [(-1, -1), (-1, 0), (-1, 1), (0, -1), (0, 1), (1, -1), (1, 0), (1, 1)]\n",
+    "        self.n_cols = len(lines[0])\n",
+    "        self.n_rows = len(lines)\n",
+    "\n",
+    "    def valid(self, point):\n",
+    "        r, c = point\n",
+    "        return  (r >= 0 and r < (self.n_rows) and\n",
+    "                 c >= 0 and c < (self.n_cols))\n",
+    "\n",
+    "    def __getitem__(self, point):\n",
+    "        return self._grid[point[0], point[1]]\n",
+    "\n",
+    "    def __iter__(self):\n",
+    "        return iter(self._grid)\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return self.n_rows * self.n_cols\n",
+    "        \n",
+    "    def neighbors(self, cell):\n",
+    "        r, c = cell\n",
+    "        return [\n",
+    "            ((r + rd), (c + cd))\n",
+    "            for rd, cd in self.directions\n",
+    "                if self.valid(((r + rd), (c + cd)))\n",
+    "\n",
+    "        ]"
    ]
   },
   {
@@ -402,6 +438,217 @@
    "metadata": {},
    "source": [
     "## Day 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "971bffb6-e1c2-43e7-bb6b-927a88764383",
+   "metadata": {},
+   "source": [
+    "### Part 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5019e127-35c5-4bea-a4bc-e9e4311db904",
+   "metadata": {},
+   "source": [
+    "The basic idea for this part is:\n",
+    "\n",
+    "- For every symbol, see if you can find a neighbor digit.\n",
+    "    - If yes, expand left and right to find the full number\n",
+    "    - Mark the indexes that contain the number and don't double count\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "8d797434-44ff-4c34-9bbf-beb5a2e15e56",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_str = \"\"\"\n",
+    "    467..114..\n",
+    "    ...*......\n",
+    "    ..35..633.\n",
+    "    ......#...\n",
+    "    617*......\n",
+    "    .....+.58.\n",
+    "    ..592.....\n",
+    "    ......755.\n",
+    "    ...$.*....\n",
+    "    .664.598..\n",
+    "\"\"\"\n",
+    "\n",
+    "sample_input, file_input = Parser.parse_input(sample_str, \"data/day3.txt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "e5a9d7d5-09c1-4f12-8f0c-6a6f4c58f095",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"1\".isdigit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "id": "c87a3319-1841-4c48-abb9-dfc1b7f6e23a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def expand_to_number(point, grid):\n",
+    "    # Expand index left and right to find the number\n",
+    "    s = e = point[1]\n",
+    "    while (s >= 0):\n",
+    "        v_s = grid.get((point[0], s - 1), \"\")\n",
+    "        if (v_s.isdigit()):\n",
+    "            s -= 1\n",
+    "        else:\n",
+    "            break\n",
+    "\n",
+    "    while (e < grid.n_cols):\n",
+    "        v_e = grid.get((point[0], e + 1), \"\")\n",
+    "        if (v_e.isdigit()):\n",
+    "            e += 1\n",
+    "        else:\n",
+    "            break\n",
+    "    return (s, e)\n",
+    "\n",
+    "def d3p1(test=False):\n",
+    "    grid = Grid(sample_input) if test else Grid(file_input)\n",
+    "    seen = set()\n",
+    "    parts = []\n",
+    "    symbol_points = [p for p in grid if not grid.get(p).isdigit() and grid.get(p) != \".\"]\n",
+    "    \n",
+    "    for p in symbol_points:\n",
+    "        neighbors = grid.neighbors(p)\n",
+    "        for n in neighbors:\n",
+    "            if (n not in seen) and (grid.get(n)).isdigit():\n",
+    "                left, right = expand_to_number(n, grid)\n",
+    "                digits = []\n",
+    "                for i in range(left, right+1):\n",
+    "                    p = (n[0], i)\n",
+    "                    seen.add(p)\n",
+    "                    digits.append(grid.get(p))\n",
+    "                parts.append(int(\"\".join(digits)))\n",
+    "    return sum(parts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "a32420d6-823e-40f3-aaa2-d6f6406dbf82",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "540025"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "assert d3p1(True) == 4361\n",
+    "d3p1()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d688d60-4259-4be8-ad21-ab7ce6117351",
+   "metadata": {},
+   "source": [
+    "### Part 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ae01da8f-0664-4526-b6f5-f632ad6153bd",
+   "metadata": {},
+   "source": [
+    "Similar idea - find gears and multiply. Duplicates don't matter. Handle double counting of neighbors per gear."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "id": "634c1ba0-2411-48a5-be44-8f28c0ba0395",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_gear_ratio(p, grid):\n",
+    "    digit_neighbors = [n for n in grid.neighbors(p) if grid.get(n).isdigit()]\n",
+    "    \n",
+    "    # Prevents double counting of neighbors\n",
+    "    seen = set({})\n",
+    "    parts = []\n",
+    "    \n",
+    "    # Find all numbers surrounding gear.\n",
+    "    for n in digit_neighbors:\n",
+    "        if n in seen:\n",
+    "            continue\n",
+    "            \n",
+    "        digits = []            \n",
+    "        left, right = expand_to_number(n, grid)\n",
+    "        for i in range(left, right+1):\n",
+    "            p = (n[0], i)\n",
+    "            digits.append(grid.get(p))\n",
+    "            seen.add(p)\n",
+    "        \n",
+    "        parts.append(int(\"\".join(digits)))\n",
+    "        \n",
+    "    return parts[0] * parts[1] if len(parts) == 2 else None\n",
+    "\n",
+    "def d3p2(test=False):\n",
+    "    grid = Grid(sample_input) if test else Grid(file_input)\n",
+    "    gear_ratios = []\n",
+    "    possible_gears = [p for p in grid if grid.get(p) == \"*\"]\n",
+    "\n",
+    "    for p in possible_gears:\n",
+    "        if (r := get_gear_ratio(p, grid)) is not None:\n",
+    "            gear_ratios.append(r)\n",
+    "            \n",
+    "    return sum(gear_ratios)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "id": "7241e164-a71f-4235-a400-41c7dd01d065",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "84584891"
+      ]
+     },
+     "execution_count": 142,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "assert d3p2(True) == 467835\n",
+    "d3p2()"
    ]
   }
  ],
