Day 9 - make it nicer

--- a/aoc/2023/answers.ipynb
+++ b/aoc/2023/answers.ipynb
@@ -1900,7 +1900,7 @@
    "id": "0e2e389b-290c-4eb1-b547-90629aba1095",
    "metadata": {},
    "source": [
-    "The brute force solution seems simple"
+    "The brute force solution seems simple."
    ]
   },
   {
@@ -1971,12 +1971,12 @@
    "id": "db0bae90-3922-45ed-af46-f657c658e53a",
    "metadata": {},
    "source": [
-    "Similar idea - but popleft with a deque when reconstructing."
+    "Similar idea - but track the first element instead."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 131,
    "id": "8e7013f0-db2b-48f4-8bd4-7fa7b8d0c84d",
    "metadata": {},
    "outputs": [],
@@ -1984,20 +1984,18 @@
     "def d9p2(test=False):\n",
     "    input = sample_input if test else file_input\n",
     "    preds = []\n",
-    "    is_zero = lambda x: x == 0\n",
     "\n",
     "    for seq in input:\n",
     "        next_seq = seq \n",
     "        prev_seq_first = []\n",
-    "        while (not all(map(is_zero, next_seq))):\n",
+    "        while (not all(x == 0 for x in next_seq)):\n",
     "            prev_seq_first.append(next_seq[0])\n",
     "            next_seq = gen_next_seq(next_seq)\n",
     "\n",
-    "        print(prev_seq_first)\n",
     "        n_to_add = 0\n",
     "        new = None\n",
     "        while (len(prev_seq_first) > 0):\n",
-    "            new = prev_seq_first.popleft() - n_to_add\n",
+    "            new = prev_seq_first.pop() - n_to_add\n",
     "            n_to_add = new\n",
     "\n",
     "        preds.append(new)\n",
@@ -2007,32 +2005,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 132,
    "id": "d2e80b80-83ef-4c38-afba-61bd594b968b",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "deque([0, 3])\n",
-      "deque([1, 2, 1])\n",
-      "deque([10, 3, 0, 2])\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "-2"
+       "1012"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "d9p2(True)"
+    "assert d9p2(True) == 2\n",
+    "d9p2(False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a14ca82-0f4d-45f6-a313-9d37743ce038",
+   "metadata": {},
+   "source": [
+    "This looks a bit messy, let's make this a bit more pythonic.\n",
+    "\n",
+    "So the prediction can be done recursively "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "id": "1f4b59b2-d570-4b85-90f4-d77507e6e08e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def make_predict(seq, pred_right):\n",
+    "    if all((i == 0 for i in seq)):\n",
+    "        return 0\n",
+    "    else:\n",
+    "        pred = make_predict([j - i for i, j in zip(seq, seq[1:])], pred_right)\n",
+    "        return pred + seq[-1] if pred_right else seq[0] - pred\n",
+    "\n",
+    "def d9p1_nice(test=False):\n",
+    "    input = sample_input if test else file_input\n",
+    "    \n",
+    "    return sum([make_predict(seq, True) for seq in input])     \n",
+    "    \n",
+    "def d9p2_nice(test=False):\n",
+    "    input = sample_input if test else file_input\n",
+    "    \n",
+    "    return sum([make_predict(seq, False) for seq in input])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "id": "c72b01df-7412-452f-bed8-ec77fa9d8f0d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1992273652"
+      ]
+     },
+     "execution_count": 148,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "assert d9p1_nice(True) == 114\n",
+    "d9p1_nice(False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "id": "9a6e72e5-21fc-4685-ac7f-4fec81196a2d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1012"
+      ]
+     },
+     "execution_count": 144,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "assert d9p2_nice(True) == 2\n",
+    "d9p2_nice()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "16f77529-85c9-40f6-81a4-62326214b0fe",
+   "metadata": {},
+   "source": [
+    "Much better! "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "547b893f-8f19-4167-9624-0d18af2f5b43",
+   "metadata": {},
+   "source": [
+    "# Day 10"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "518a5674-8a74-42d5-80cc-6d3badfef2fe",
+   "metadata": {},
+   "source": [
+    "## Part 1"
    ]
   }
  ],
