--- a/aoc/2023/answers.ipynb
+++ b/aoc/2023/answers.ipynb
@@ -18,14 +18,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 168,
    "id": "a62aeaf0-bd5b-4a8c-9a7b-c5fa46d18c08",
    "metadata": {},
    "outputs": [],
    "source": [
     "from typing import List, Tuple\n",
     "from collections import Counter, abc, deque\n",
-    "from functools import reduce\n",
+    "from functools import reduce, cached_property\n",
     "from ast import literal_eval\n",
     "import re"
    ]
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 503,
    "id": "21555f69-c80b-4d96-8a2a-c3f55714ddf9",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,12 @@
     "    def parse_input(sample_str, filename, pp=lambda x: x):\n",
     "        return Parser._read_test_input(sample_str, pp), Parser._read_file(filename, pp)\n",
     "\n",
-    "\n",
+    "    def new_parse_input(input_str, pp=lambda x: x):\n",
+    "        if input_str.endswith(\".txt\"):\n",
+    "            return Parser._read_file(input_str, pp)\n",
+    "        else:\n",
+    "            return Parser._read_test_input(input_str, pp)\n",
+    "                                                                \n",
     "class Grid(abc.Mapping):\n",
     "    \"\"\"\n",
     "        2D-grid keyed by (row, col) and value is content\n",
@@ -2121,11 +2126,394 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 350,
+   "id": "f2d0f6c5-e1cd-41c9-adce-7e4ed6cb18d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_str = \"\"\"\n",
+    ".....\n",
+    ".S-7.\n",
+    ".|.|.\n",
+    ".L-J.\n",
+    ".....\n",
+    "\"\"\"\n",
+    "\n",
+    "sample_input, file_input = Parser.parse_input(sample_str, \"data/day10.txt\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "518a5674-8a74-42d5-80cc-6d3badfef2fe",
+   "id": "f50024b1-801c-4ba7-9aa8-7da9cdbe4926",
    "metadata": {},
    "source": [
     "## Part 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a9772551-38ec-4685-b871-18a896d7a027",
+   "metadata": {},
+   "source": [
+    "Good old grid and loops. Seems like there are two parts to this problem\n",
+    "\n",
+    "- Find the main loop.\n",
+    "- Find the farthest point from start in this loop.\n",
+    "\n",
+    "To find the loop - we just have to traverse from the start in one of the two directions, until we can't traverse anymore. DFS should do the trick. \n",
+    "\n",
+    "Note: Since we are guaranteed just one loop from start - we just have to track a single path as we traverse. Don't have to worry about things like backtracking.\n",
+    "\n",
+    "Once we find the loop - farthest point will be length/2.\n",
+    "\n",
+    "Concepts:\n",
+    "- Grid - defines the space using Point(x, y) -> value. Get neighbors(point) -> List[Point]\n",
+    "- def loop(start, grid) -> return [(x, y)].\n",
+    "- perform dfs on loop, also track the path.\n",
+    "\n",
+    "P.S: I tried DFS recursively - ran into recursion depth issues. Re-implemented using stack and it works."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 581,
+   "id": "e14dcf1f-acca-4e51-bc1e-d6d464f10529",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Grid:\n",
+    "    def __init__(self, points):\n",
+    "        self._grid = {(i, j): points[i][j] for i in range(len(points)) for j in range(len(points[0]))}\n",
+    "        self.n_rows, self.n_cols = len(points), len(points[0])\n",
+    "        self._N, self._S, self._E, self._W = (-1, 0), (1, 0), (0, 1), (0, -1)\n",
+    "        self._deltas = {self._N, self._S, self._E, self._W}\n",
+    "        self.s2d = {\"|\": {self._N, self._S},\n",
+    "                        \"-\": {self._E, self._W},\n",
+    "                           \"L\": {self._N, self._E},\n",
+    "                           \"J\": {self._N, self._W},\n",
+    "                           \"7\": {self._W, self._S},\n",
+    "                           \"F\": {self._S, self._E}}\n",
+    "        self.ground = \".\"\n",
+    "        self.START = \"S\"\n",
+    "\n",
+    "    @cached_property\n",
+    "    def start(self):\n",
+    "        return next(p for p, v in self._grid.items() if v == self.START)\n",
+    "\n",
+    "    @cached_property\n",
+    "    def start_dir(self):\n",
+    "        for k, v in self.s2d.items():\n",
+    "            if self.connects_from(self.start, v):\n",
+    "                return k\n",
+    "                \n",
+    "    def connects_from(self, point, deltas):\n",
+    "        \"\"\"\n",
+    "            Returns true if point is connected from given neighbor\n",
+    "        \"\"\"\n",
+    "        valid_neighbors = {\n",
+    "          self._N: {\"|\", \"7\", \"F\"},\n",
+    "          self._S: {\"|\", \"L\", \"J\"},\n",
+    "          self._E: {\"7\", \"J\", \"-\"},\n",
+    "          self._W: {\"-\", \"F\", \"L\"}\n",
+    "        }\n",
+    "\n",
+    "        return all(self._grid[self.add(point, delta)] in valid_neighbors[delta] for delta in deltas if self.valid_point(self.add(point, delta)) ) \n",
+    "\n",
+    "    def __getitem__(self, key):\n",
+    "        return self._grid[key]\n",
+    "        \n",
+    "    @staticmethod\n",
+    "    def add(x, y):\n",
+    "        return (x[0] + y[0], x[1] + y[1]) \n",
+    "\n",
+    "    def valid_point(self, p):\n",
+    "     return ((p[0] >= 0 and p[0] < self.n_rows) and\n",
+    "        (p[1] >= 0 and p[1] < self.n_cols))\n",
+    "\n",
+    "    def neighbors(self, point):\n",
+    "        point_dir = self._grid[point] if point != self.start else self.start_dir\n",
+    "        \n",
+    "        neigh_points = set()\n",
+    "        for dir in self.s2d[point_dir]:\n",
+    "            neigh = self.add(point, dir)\n",
+    "            if self.valid_point(neigh):\n",
+    "                neigh_points.add(neigh)\n",
+    "        return neigh_points\n",
+    "        \n",
+    "g = Grid(sample_input)\n",
+    "assert g.start == (1, 1)\n",
+    "assert not g.connects_from(g.start, [g._N])\n",
+    "assert g.connects_from(g.start, [g._S])\n",
+    "assert g.connects_from(g.start, [g._E])\n",
+    "assert not g.connects_from(g.start, [g._W])\n",
+    "assert g.start_dir == \"F\"\n",
+    "assert g.neighbors(g.start) == {g.add(g.start, g._S), g.add(g.start, g._E)}\n",
+    "assert g[(1, 1)] == \"S\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 582,
+   "id": "db843eb5-3ef8-42ef-ad19-ad53af11bef7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def loop(grid, point):\n",
+    "    def dfs(start_point):\n",
+    "        visited = set()\n",
+    "        unexplored = [start_point]\n",
+    "        path = []\n",
+    "        \n",
+    "        while (len(unexplored) > 0):\n",
+    "            point = unexplored.pop()\n",
+    "            visited.add(point)\n",
+    "            path.append(point)\n",
+    "        \n",
+    "            for p in grid.neighbors(point):\n",
+    "                if p not in visited:\n",
+    "                    unexplored.append(p)\n",
+    "\n",
+    "        return path\n",
+    "        \n",
+    "    path = dfs(point)\n",
+    "    \n",
+    "    return path\n",
+    "\n",
+    "g = Grid(sample_input)\n",
+    "\n",
+    "assert len(loop(g, g.start)) == 9"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 583,
+   "id": "34ed0f18-7fec-4ec4-a7e7-28f90328da5b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def d10p1(test=False):\n",
+    "    input = sample_input_2 if test else file_input_2\n",
+    "    grid = Grid(input)\n",
+    "    \n",
+    "    return (len(loop(grid, grid.start)) // 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 584,
+   "id": "d54366ca-455f-49e7-980e-250671eace8c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6956"
+      ]
+     },
+     "execution_count": 584,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sample_str_2 = \"\"\"\n",
+    "..F7.\n",
+    ".FJ|.\n",
+    "SJ.L7\n",
+    "|F--J\n",
+    "LJ...\n",
+    "\"\"\"\n",
+    "\n",
+    "sample_input_2, file_input_2 = Parser.parse_input(sample_str_2, \"data/day10.txt\")\n",
+    "\n",
+    "assert d10p1(True) == 8\n",
+    "d10p1()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6cc7f9d8-adb9-4618-8e3e-3808a22f00fa",
+   "metadata": {},
+   "source": [
+    "## Part 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "22ae18fd-c31d-4419-a25e-c96d42450579",
+   "metadata": {},
+   "source": [
+    "Ok, this is a little more tricky. Turns out - the trick for part 2 is the [ray-casting algorithm](https://en.wikipedia.org/wiki/Point_in_polygon). I had to look this up. Its a fairly simple technique to figure out if a point is inside or outside a polygon.\n",
+    "\n",
+    "_The number of intersections for a ray passing from the exterior of the polygon to any point: If odd, it shows that the point lies inside the polygon; if even, the point lies outside the polygon. This test also works in three dimensions._\n",
+    "\n",
+    "This intuitively makes sense if you draw a few examples. The tricky part in this problem is the boxyy nature of the input. i.e what do you do when you go along a pipe edge.\n",
+    "\n",
+    "Let's pick \"going right\" as our direction. So as a ray passes through our space, we essentially track the inside/outside state at every tile.\n",
+    "\n",
+    "Drawing this out - these are the cases I came across:\n",
+    "Values: -, |, L, F, J, 7\n",
+    "\n",
+    "- `-` No boundary change. \n",
+    "- `|` => 1 crossing. Line going NS\n",
+    "- `L` => 2 cases:\n",
+    "    - `J` => no crossing. We can continue.\n",
+    "    - `7` => 1 crossing. \n",
+    "- `F` => 2 cases:\n",
+    "    - `7` => no crossing. We can continue\n",
+    "    - `J` => 1 crossing.\n",
+    "- `7` - This one is interesting. We can never lead with a `7` when moving right. It should have been preceeded by an \"F\" or an `L`. i.e the loop should have turned \"into\" our line.\n",
+    "- `J` - Similar to the case of `7`.\n",
+    "- `.` - candidate point. Check state and update tile."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 684,
+   "id": "d36d261a-20d2-4821-80b2-aaab5d079e6c",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "expected ':' (730906065.py, line 8)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[684], line 8\u001b[0;36m\u001b[0m\n\u001b[0;31m    for p, val in loop_points\u001b[0m\n\u001b[0m                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m expected ':'\n"
+     ]
+    }
+   ],
+   "source": [
+    "def intersect_loop(loop_points, curr_point):\n",
+    "    \"\"\"\n",
+    "        Move right\n",
+    "    \"\"\"\n",
+    "    ct = 0\n",
+    "    prev = None\n",
+    "    \n",
+    "    for p, val in loop_points\n",
+    "        if p > curr_point:\n",
+    "            return ct % 2 != 0\n",
+    "        elif val == \"|\":\n",
+    "            ct += 1\n",
+    "        elif val in [\"L\", \"F\"]:\n",
+    "            prev = val\n",
+    "        elif val in [\"7\", \"J\"]:\n",
+    "            assert (prev in [\"L\", \"F\"])\n",
+    "            if prev == \"L\" and val == \"7\":\n",
+    "                ct += 1\n",
+    "            elif prev == \"F\" and val == \"J\":\n",
+    "                ct += 1\n",
+    "            prev = None\n",
+    "        \n",
+    "    return ct % 2 != 0\n",
+    "    \n",
+    "sample_str = \"\"\"\n",
+    "    ...........\n",
+    "    .S-------7.\n",
+    "    .|F-----7|.\n",
+    "    .||.....||.\n",
+    "    .||.....||.\n",
+    "    .|L-7.F-J|.\n",
+    "    .|..|.|..|.\n",
+    "    .L--J.L--J.\n",
+    "    ...........\n",
+    "\"\"\"\n",
+    "\n",
+    "grid = Grid(Parser.new_parse_input(sample_str))\n",
+    "assert intersect_loop([((6, 1), \"|\"), ((6, 4), \"|\"), ((6, 6), \"|\"), ((6, 9), \"|\")], (6, 2)) == True\n",
+    "assert intersect_loop([((6, 1), \"|\"), ((6, 4), \"|\"), ((6, 6), \"|\"), ((6, 9), \"|\")], (6, 5)) == False\n",
+    "assert intersect_loop([((6, 1), \"|\"), ((6, 4), \"|\"), ((6, 6), \"|\"), ((6, 9), \"|\")], (6, 7)) == True\n",
+    "assert intersect_loop([((6, 1), \"|\"), ((6, 4), \"|\"), ((6, 6), \"|\"), ((6, 9), \"|\")], (6, 10)) == False\n",
+    "assert intersect_loop([((5, 1), \"|\"), ((5, 2), \"L\"), ((5, 4), \"7\"), ((5, 6), \"F\"), ((5, 8), \"J\"), ((5, 9), \"|\")], (5, 10)) == False\n",
+    "assert intersect_loop([((5, 1), \"|\"), ((5, 2), \"L\"), ((5, 4), \"7\"), ((5, 6), \"F\"), ((5, 8), \"J\"), ((5, 9), \"|\")], (5, 5)) == False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 682,
+   "id": "fa664f9b-fc96-4ca7-b91e-19e9de1c5321",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def d10p2(input):\n",
+    "    grid = Grid(Parser.new_parse_input(input))\n",
+    "    dir_vals = [\"L\", \"7\", \"F\", \"J\", \"|\"]\n",
+    "    loop_path = set(loop(grid, grid.start))\n",
+    "    points = ((r, c) for r in range(grid.n_rows) for c in range(grid.n_cols) if (r, c) not in loop_path)\n",
+    "    loop_in_row = lambda p: ((p[0], c) for c in range(grid.n_cols) if (p[0], c) in loop_path)\n",
+    "    map_start = lambda val: grid.start_dir if val == \"S\" else val\n",
+    "    tiles = []\n",
+    "    \n",
+    "    for p in points:\n",
+    "        v = grid[p]\n",
+    "        loop_points = [(lp, map_start(grid[lp])) for lp in loop_in_row(p) if map_start(grid[lp]) in dir_vals]\n",
+    "        if len(loop_points) > 0:\n",
+    "            if intersect_loop(loop_points, p):\n",
+    "                tiles.append(p)\n",
+    "\n",
+    "    return len(tiles)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 683,
+   "id": "5457de40-9e19-4f45-8181-41e5aaa969c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "455"
+      ]
+     },
+     "execution_count": 683,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sample_str = \"\"\"\n",
+    "    ...........\n",
+    "    .S-------7.\n",
+    "    .|F-----7|.\n",
+    "    .||.....||.\n",
+    "    .||.....||.\n",
+    "    .|L-7.F-J|.\n",
+    "    .|..|.|..|.\n",
+    "    .L--J.L--J.\n",
+    "    ...........\n",
+    "\"\"\"\n",
+    "s2 = \"\"\"\n",
+    "    .F----7F7F7F7F-7....\n",
+    "    .|F--7||||||||FJ....\n",
+    "    .||.FJ||||||||L7....\n",
+    "    FJL7L7LJLJ||LJ.L-7..\n",
+    "    L--J.L7...LJS7F-7L7.\n",
+    "    ....F-J..F7FJ|L7L7L7\n",
+    "    ....L7.F7||L7|.L7L7|\n",
+    "    .....|FJLJ|FJ|F7|.LJ\n",
+    "    ....FJL-7.||.||||...\n",
+    "    ....L---J.LJ.LJLJ...\n",
+    "\"\"\"\n",
+    "\n",
+    "s3 = \"\"\"\n",
+    "    FF7FSF7F7F7F7F7F---7\n",
+    "    L|LJ||||||||||||F--J\n",
+    "    FL-7LJLJ||||||LJL-77\n",
+    "    F--JF--7||LJLJ7F7FJ-\n",
+    "    L---JF-JLJ.||-FJLJJ7\n",
+    "    |F|F-JF---7F7-L7L|7|\n",
+    "    |FFJF7L7F-JF7|JL---7\n",
+    "    7-L-JL7||F7|L7F-7F7|\n",
+    "    L.L7LFJ|||||FJL7||LJ\n",
+    "    L7JLJL-JLJLJL--JLJ.L\n",
+    "\"\"\"\n",
+    "assert d10p2(sample_str) == 4\n",
+    "assert d10p2(s2) == 8\n",
+    "assert d10p2(s3) == 10\n",
+    "\n",
+    "d10p2(\"data/day10.txt\")"
    ]
   }
  ],
